[package]
name = "zet-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
dotenvy = "0.15"
axum-extra = { version = "0.10", features = ["multipart"] }
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
async-trait = "0.1"
image = "0.25"

[features]
default = ["s3"]
s3 = ["aws-sdk-s3", "aws-config"]
local-storage = []
